[package]
name = "alex-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"

serial2 = "0.1.6"
serialport = "4.2.0"
crossbeam-channel = "0.5.6"
crossbeam = "0.8.1"
anyhow = "1.0.66"
thiserror = "1.0.37"
native-dialog = "0.6.3"
cfg-if = "1.0.0"
dirs = "4.0.0"
filename = "0.1.1"
chrono = "0.4.23"

[build-dependencies]
winres = "0.1.12"